fix desgin on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -79,12 +79,13 @@ th:first-child, td:first-child {
   right: 0px;
   z-index: 2;
   width: 150px;
-  background-color: rgba(255,255,255,0.8);
   color: #000;
   text-align: right;
-  
-
 }
+tbody th:first-child, td:first-child{
+  background-color: rgba(255,255,255,0.8);
+}
+
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 body{
   background: -webkit-linear-gradient(left, #1a516d, #5DC0CD);
